# MolSim-SS26-Thesis

./: .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  ROADMAP.md  perf.data  perf.data.old  setup.sh
.cmake/: perf-config.cmake  spdlog.cmake  tracy-config.cmake  vtk-config.cmake  yaml.cmake
.github/workflows/: cargo-test.yml  cargo.yml  cmake.yml  cpp.yml  docs.yml  equality.yml  rustdoc.yml  template.yaml
benchmark/: README.md  cpp-directsum.data  cpp-linkedcells.data  rs-directsum.data  rs-linkedcells.data
cpp-moldyn-cli/: Args.h  README.md  main.cpp
cpp-moldyn-core/: Macro.h  Particle.h  Simulation.h  TracyHelper.h  Vec3.h
cpp-moldyn-core/container/: DirectSum.h  DirectSumParallel.h  LinkedCells.h  ParticleContainer.h
cpp-moldyn-core/force/: Force.cpp  Force.h  LennardJones.h  Newton.h
cpp-moldyn-core/simulation/: ParticleContainer.h  Simulation.h
cpp-moldyn-io/: Reader.cpp  Reader.h  VTKWriter.h  Writer.cpp  Writer.h  XYZWriter.h  YAMLImplementation.h  YAMLReader.h  YAMLWriter.h  YamlReader.cpp  YamlReader.h
cpp-moldyn-test/: equiv_test.cc
input/: halleys-comet-custom-force-half.yaml  halleys-comet-custom-force.yaml  halleys-comet.yaml  two-bodies-collision-0001-linked-cells.yaml  two-bodies-collision-0001-parallel.yaml  two-bodies-collision-0001.yaml  two-bodies-collision.yaml  two-colliding-particles.yaml
moldyn-cli/: Cargo.toml
moldyn-cli/src/: main.rs
moldyn-core/: Cargo.toml  build.rs
moldyn-core/src/: lib.rs  main.rs  particle.rs  vec3.rs
moldyn-core/src/forces/: custom.rs  ljp.rs  mod.rs  newton.rs
moldyn-core/src/reader/: args.rs  entry.rs  mod.rs
moldyn-core/src/simulation/: args.rs  cells.rs  container.rs  dynsim.rs  mod.rs  sum.rs
moldyn-core/src/simulation/cells/: mod.rs
moldyn-core/src/simulation/sum/: mod.rs  parallel.rs
moldyn-core/src/writer/: mod.rs  vtk.rs  yml.rs
moldyn-io/: Cargo.toml
moldyn-io/src/: lib.rs
moldyn-io/src/reader/: definition.rs  entry.rs  mod.rs
moldyn-io/src/writer/: mod.rs  txt.rs  vtk.rs  xyz.rs  yml.rs
moldyn-wasm/: Cargo.toml
moldyn-wasm/src/: lib.rs  particle.rs  sum.rs  vec3.rs
presentation/: .gitignore  Reference.bib  Task1.tex  Task2.tex  Task3.tex  Task4.tex  Task5.tex  clear-latex.sh
template-cpp/: .gitignore  README.md
template-cpp/src/: MolSim.cpp
template-cpp/src/outputWriter/: VTKWriter.cpp  VTKWriter.h
template-rust/: .gitignore  Cargo.toml  README.md
template-rust/src/: file_reader.rs  main.rs  particle.rs
template-rust/src/output_writer/: mod.rs  vtk.rs  xyz.rs
test-equality/: Cargo.toml  README.md
test-equality/src/: cpp.rs  log.rs  main.rs  rust.rs  test.rs
