[package]
name = "moldyn-cli"
version = "0.1.0"
edition = "2024"

[profile.bench]
inherits = "release"
opt-level = 3 # this is only the frame program
# directory should be "bench"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
moldyn-core = { path = "../moldyn-core" }
moldyn-io = { path = "../moldyn-io" }
