[package]
name = "moldyn-core"
version = "0.1.0"
authors = ["Anatoly Weinstein"]
edition = "2024"
publish = false

[features]
default = ["vtk", "yaml"]
vtk = ["vtkio"]
yaml = ["serde_yaml"]

[dependencies]
meval = { version = "0.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }
vtkio = { version = "0.6", optional = true }
