[package]
name = "moldyn-core"
version = "0.1.0"
authors = ["Anatoly Weinstein"]
edition = "2024"
publish = false

[features]
nightly = []

[profile.bench]
inherits = "release"
opt-level = 2 # optimize equally with c++
lto = true
codegen-units = 1

# https://www.rustfaq.org/en/how-to-profile-rust-code-with-perf/
debug = true

[dependencies]
meval = { version = "0.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
