[package]
name = "moldyn-io"
version = "0.1.0"
edition = "2024"

[features]
default = ["vtk", "yaml"]
vtk = ["vtkio"]
yaml = ["serde_yaml"]
json = ["serde_json"]

[dependencies]
meval = { version = "0.2", features = ["serde"] }
moldyn-core = { path = "../moldyn-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
vtkio = { version = "0.6", optional = true }
